# embedsearch

./: Cargo.toml  LICENSE  README.md
examples/: basic.rs  parallel.rs  save_load.rs
src/: engine.rs  index.rs  lib.rs  ranking.rs  test.rs  tokenizer.rs  types.rs
