[package]
name = "embedsearch"
version = "0.1.0"
edition = "2024"
description = "Lightweight embeddable full-text search engine in pure Rust"
license = "MIT"
repository = "https://github.com/hkathed/embedsearch"
readme = "../../README.md"
keywords = ["search", "search-engine", "index", "bm25", "text"]
categories = ["text-processing"]


[dependencies]
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
anyhow = "1.0"
